--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Coral Ecophysiology Laboratory
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Laboratory of Sylvain Agostini at the Shimoda Marine Research Center focusing mainly on coral ecophysiology but more in general marine ecophysiology and the impact of climate change and ocean acidification.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: agostini.sylvain@shimoda.tsukuba.ac.jp
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: seal20
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: AgoRemix
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
