--- a/_config.yml
+++ b/_config.yml
@@ -42,12 +42,9 @@ google_analytics:
 # Used for Sitemap.xml and your RSS feed
 url:
 
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
-
+##Try to add a header
+header: yes
+header_large: images/covertxt.jpg
 #
 # !! You don't need to change any of the configuration flags below !!
 #
