--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Coral Ecophysiology Laboratory
 description: Laboratory of Sylvain Agostini at the Shimoda Marine Research Center focusing mainly on coral ecophysiology but more in general marine ecophysiology and the impact of climate change and ocean acidification.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/covertxt.jpg
 
 #
 # Flags below are optional
@@ -42,10 +42,6 @@ google_analytics:
 # Used for Sitemap.xml and your RSS feed
 url:
 
-##Try to add a header
-header: yes
-header_large: images/covertxt.jpg
-#
 # !! You don't need to change any of the configuration flags below !!
 #
 
@@ -81,4 +77,3 @@ exclude:
   - README.md
   - CNAME
 
-theme: jekyll-theme-cayman
